--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
             <artifactId>gson</artifactId>
             <version>2.8.9</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.0</version>
+        </dependency>
     </dependencies>
 
 
